--- a/BookStoreClient/src/app/layouts/navbar/navbar.component.html
+++ b/BookStoreClient/src/app/layouts/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Bir Koşu Store</a>
+    <a class="navbar-brand" routerLink="">Bir Koşu Store</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a style="font-size: 20px;" class="nav-link active" aria-current="page" routerLink="/">{{ "home" | translate }}</a>
+          <a style="font-size: 20px;" class="nav-link active" aria-current="page" routerLink="">{{ "home" | translate }}</a>
         </li>
       </ul>
       <div class="d-flex">
