--- a/BookStoreClient/src/app/home/home.component.css
+++ b/BookStoreClient/src/app/home/home.component.css
@@ -7,11 +7,12 @@
 }
 .categories li {
     padding: 10px 10px 10px 5px;
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
     cursor: pointer;
 }
 .categories li:hover {
-    background-color: #f1f1f1;
+    background-color: black;
+    color: white;
 }
 
 
@@ -24,4 +25,10 @@
 .page-link{
     color: black;
     cursor: pointer;
+}
+
+.active {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
 }
