--- a/BookStoreClient/src/app/home/home.component.html
+++ b/BookStoreClient/src/app/home/home.component.html
@@ -12,6 +12,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </span>
           <input
+            [(ngModel)]="searchCategory"
             type="search"
             class="form-control"
             placeholder="{{ 'search' | translate }}"
@@ -21,14 +22,19 @@
 
         <!-- category list -->
         <ul class="categories">
-          <li>{{ "lifestyle" | translate }}</li>
-          <li>{{ "jordan" | translate }}</li>
-          <li>{{ "running" | translate }}</li>
-          <li>{{ "basketball" | translate }}</li>
-          <li>{{ "football" | translate }}</li>
-          <li>{{ "training" | translate }}</li>
-          <li>{{ "tennis" | translate }}</li>
-          <li>{{ "walking" | translate }}</li>
+          <li 
+          (click)="changeCategory(null)"
+          [ngClass]="request.categoryId === null ? 'active': ''"
+          >
+            {{ "allproducts" | translate }}
+          </li>
+          <li 
+          (click)="changeCategory(item.id)"
+          *ngFor="let item of categories | category: searchCategory"
+          [ngClass]="request.categoryId === item.id ? 'active': ''"
+          >
+            {{ item.name }}
+          </li>
         </ul>
         <!-- category list -->
       </div>
@@ -86,11 +92,11 @@
     <div class="d-flex justify-content-center">
       <nav aria-label="Page navigation example" style="float: right">
         <ul class="pagination">
-          <li class="page-item" *ngIf="!response.isFirstPage">
+          <li class="page-item" *ngIf="!response?.isFirstPage">
             <a
               class="page-link"
               aria-label="Previous"
-              (click)="getAll(response.pageNumber - 1)"
+              (click)="getAll(response?.pageNumber - 1)"
             >
               <span aria-hidden="true">&laquo;</span>
             </a>
@@ -99,16 +105,16 @@
           <li
             class="page-item"
             *ngFor="let item of pageNumbers"
-            [ngClass]="response.pageNumber === item ? 'active' : ''"
+            [ngClass]="response?.pageNumber === item ? 'active' : ''"
           >
             <a class="page-link" (click)="getAll(item)">{{ item }}</a>
           </li>
 
-          <li class="page-item" *ngIf="!response.isLastPage">
+          <li class="page-item" *ngIf="!response?.isLastPage">
             <a
               class="page-link"
               aria-label="Next"
-              (click)="getAll(response.pageNumber + 1)"
+              (click)="getAll(response?.pageNumber + 1)"
             >
               <span aria-hidden="true">&raquo;</span>
             </a>
