--- a/BookStoreClient/src/app/shopping-cart/shopping-cart.component.html
+++ b/BookStoreClient/src/app/shopping-cart/shopping-cart.component.html
@@ -1,100 +1,127 @@
-<h1 style="font-size: 24px;" class="text-left mt-2">{{"cart" | translate}} (3 {{"product" | translate}})</h1>
+<h1 *ngIf="shopping.count !== 0" style="font-size: 24px" class="text-left mt-2">
+  {{ "cart" | translate }} ({{ shopping.count }} {{ "product" | translate }})
+</h1>
+<div *ngIf="shopping.count === 0" class="card mt-3">
+    <div class="card-body d-flex justify-content-between">
+        <div class="mt-1 d-flex align-items-center">
+            <i style="font-size: 30px;"  class="fa-solid fa-cart-shopping me-4"></i>
+            <span style="font-size: 20px; font-weight: 500;">Sepetinde ürün bulunmamaktadır.</span>
+        </div>
+        <div>
+            <button routerLink="" class="btn btn-dark">Alışverişe Başla</button>
+        </div>
+    </div>
+</div>
+ 
 
-<div class="row mt-3">
-    <div class="col-sm-12 col-md-8 col-lg-9 col-12 " >
-        <div 
-        *ngFor="let item of shopping.shoppingCart" 
-        class="mt-2 card mb-4"
-        
+<div *ngIf="shopping.count > 0" class="row mt-3">
+  <div class="col-sm-12 col-md-8 col-lg-9 col-12">
+    <div *ngFor="let item of shopping.shoppingCart" class="mt-2 card mb-4">
+      <div class="row">
+        <div class="col-3">
+          <div style="padding: 5px 5px">
+            <img
+              style="height: 215px; width: 240px"
+              class="img-fluid"
+              [src]="item.imageUrl"
+            />
+          </div>
+        </div>
+        <div
+          class="col-6 d-flex flex-column align-items-center justify-content-center"
         >
-            <div class="row">
-                <div class="col-3">
-                    <div style="padding: 5px 5px;">
-                        <img 
-                        style="height: 215px; width: 240px;"
-                        class="img-fluid"
-                        [src]="item.imageUrl" />
-                    </div>
-                </div>
-                <div class="col-6 d-flex flex-column align-items-center justify-content-center">
-                    <h4>{{item.title}}</h4>
-                    <p>{{item.description}}</p>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <div class="form-group">
-                            <label for="size">{{"size" | translate}}</label>
-                            <select class="form-control-sm ms-1 me-3" name="size" id="">
-                                <option value="38">38</option>
-                                <option value="39">39</option>
-                                <option value="40">40</option>
-                                <option value="41">41</option>
-                                <option value="42">42</option>
-                                <option value="43">43</option>
-                                <option value="44">44</option>
-                                <option value="45">45</option>
-                                <option value="46">46</option>
-                                <option value="47">47</option>
-                            </select>
-                        </div>
-                        <label for="quantity" class="me-1">{{"quantity" | translate}}</label>
-                        <select 
-                        class="form-control-sm" 
-                        id="quantity"
-                        >
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                        </select>                   
-                    </div>
-                </div>
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <span class="me-4" style="font-size: 25px; font-weight: 300;">{{item.price | currency : "₺"}}</span>
-                        <i style="font-size: 20px;" class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
+          <h4>{{ item.title }}</h4>
+          <p>{{ item.description }}</p>
+          <div class="d-flex align-items-center justify-content-center">
+            <div class="form-group">
+              <label for="size">{{ "size" | translate }}</label>
+              <select class="form-control-sm ms-1 me-3" name="size" id="size">
+                <option value="38">38</option>
+                <option value="39">39</option>
+                <option value="40">40</option>
+                <option value="41">41</option>
+                <option value="42">42</option>
+                <option value="43">43</option>
+                <option value="44">44</option>
+                <option value="45">45</option>
+                <option value="46">46</option>
+                <option value="47">47</option>
+              </select>
             </div>
+            <label for="quantity" class="me-1">{{
+              "quantity" | translate
+            }}</label>
+            <select class="form-control-sm" id="quantity">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+          </div>
         </div>
+        <div class="col-3 d-flex justify-content-center align-items-center">
+          <div class="d-flex justify-content-center align-items-center">
+            <span class="me-4" style="font-size: 25px; font-weight: 300">{{
+              item.price | currency : "₺"
+            }}</span>
+            <i style="font-size: 20px" class="fa-solid fa-trash"></i>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="col-sm-12 col-md-4 col-lg-3 col-12">
-        <button
-         style="font-size: 18px; font-weight: 600;" 
-         class=" mt-2 btn btn-dark text-center w-100">
-         {{"checkout" | translate}}
-         <i class="fa-solid fa-chevron-right"></i>
-        </button>
-        <div class="card mt-4 mb-4 p-3">
-            <h1 style="font-size: 22px; font-weight: 350;" class="text-center">{{"cartsummary" | translate}}</h1>
-            <hr>
-                <ul style="padding-right: 10px;">
-                    <li class="d-flex justify-content-between">
-                        <div>{{"subtotal" | translate}}</div>
-                        <span>{{850|currency: "₺"}}</span>
-                    </li>
-                    <li class="d-flex justify-content-between">
-                        <div>{{"shipping" | translate}}</div>
-                        <span>{{35|currency: "₺"}}</span>
-                    </li>
-                    <li class="d-flex justify-content-between">
-                        <div>{{"discount" | translate}}</div>
-                        <span>{{50|currency:"₺"}}</span>
-                    </li>          
-                </ul>
-            <hr>
-            <h5 class="text-end"><span class="me-4">{{"total" | translate}}</span>{{835|currency:"₺"}}</h5>
-        </div>
-        <button
-         style="font-size: 18px; font-weight: 600;" 
-         class="btn btn-dark text-center w-100">
-         {{"checkout" | translate}}
-         <i class="fa-solid fa-chevron-right"></i>
-        </button>
+  <div class="col-sm-12 col-md-4 col-lg-3 col-12">
+    <button
+      style="font-size: 18px; font-weight: 600"
+      class="mt-2 btn btn-dark text-center w-100"
+    >
+      {{ "checkout" | translate }}
+      <i class="fa-solid fa-chevron-right"></i>
+    </button>
+    <div class="card mt-4 mb-4 p-3">
+      <h1 style="font-size: 22px; font-weight: 350" class="text-center">
+        {{ "cartsummary" | translate }}
+      </h1>
+      <hr />
+      <ul style="padding-right: 10px">
+        <li class="d-flex justify-content-between">
+          <div>{{ "subtotal" | translate }}</div>
+          <span>
+            {{ subtotal | currency : "₺" }}
+          </span>
+        </li>
+        <li class="d-flex justify-content-between">
+          <div>{{ "shipping" | translate }}</div>
+          <span>
+            {{ shipping | currency : "₺" }}
+          </span>
+        </li>
+        <li class="d-flex justify-content-between" name="discount">
+          <div>{{ "discount" | translate }}</div>
+          <span>
+            {{ discount | currency : "₺" }}
+          </span>
+        </li>
+      </ul>
+      <hr />
+      <h5 name="total" class="text-end">
+        <span class="me-4">{{ "total" | translate }}</span>
+        {{ total | currency : "₺" }}
+      </h5>
     </div>
+    <button
+      style="font-size: 18px; font-weight: 600"
+      class="btn btn-dark text-center w-100"
+    >
+      {{ "checkout" | translate }}
+      <i class="fa-solid fa-chevron-right"></i>
+    </button>
+  </div>
 </div>
