--- a/BookStoreClient/src/app/layouts/navbar/navbar.component.html
+++ b/BookStoreClient/src/app/layouts/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="">Bir Koşu Store</a>
+    <a class="navbar-brand" routerLink="">Bi Koşu Store</a>
     <button
       class="navbar-toggler"
       type="button"
